--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "izica <artemiztomska@gmail.com>",
     "license": "MIT",
     "dependencies": {
+        "bootstrap": "3",
         "jquery": "^3.3.1"
     },
     "devDependencies": {
